--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="CSS_pagina_teste.css"> <!--Dando o link para o HTML buscar o css da página-->
+  <link rel="stylesheet" href="./CSS/style.css"> <!--Dando o link para o HTML buscar o css da página-->
   <title>Mabi Games</title>
 
 </head>
