--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <li> <!--Primeiro elemento da lista-->
           <a href="#">Nossos jogos</a>
           <ul> <!--Resto da lista, que ficará escondida até que o usuário passe o mouse por cima do primeiro elemento-->
-            <li><a href="./Mario Jump/Index.html">Mario Jump</a></li>
-            <li><a href="./snake Game/Index.html">Snake Game</a></li>
-            <li><a href="./Jogo da Memória/Index.html">Jogo da Memória</a></li>
-            <li><a href="GumokuDesc.html">Gomoku</a></li>
-            <li><a href="QuebraCabecaDesc.html">Quebra Cabeça</a></li>
+            <li><a href="./Mario Jump/index.html">Mario Jump</a></li>
+            <li><a href="./snake Game/index.html">Snake Game</a></li>
+            <li><a href="./Jogo da Memória/index.html">Jogo da Memória</a></li>
+            <li><a href="#">Gomoku</a></li>
+            <li><a href="#">Quebra Cabeça</a></li>
           </ul>
         </li>
 
@@ -106,28 +106,28 @@
 
   <div class="container">
     <div class="column-1"> <!--Primeira DIV declarada com a classe de "Column 1" -->
-      <a href="./snake Game/Index.html">
+      <a href="./snake Game/index.html">
         <h3>Snake Game</h3>
         <img src="./Imagens/snake.png" width="150">
       </a>
     </div>
 
     <div class="column-2"> <!--Segunda DIV declarada com a classe de "Column 2" -->
-      <a href="./Mario Jump/Index.html">
+      <a href="./Mario Jump/index.html">
         <h3>Mario Jump</h3>
         <img src="./Imagens/Paper-Mario-icon.png" width="150">
       </a>
     </div>
 
     <div class="column-3"> <!--Terceira DIV declarada com a classe de "Column 3" -->
-      <a href="./Jogo da Memória/Index.html">
+      <a href="./Jogo da Memória/index.html">
         <h3>Jogo da Memória</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
     </div>
 
     <div class="column-4"> <!--Quarta DIV declarada com a classe de "Column 4" -->
-      <a href="./Mario Jump/Index.html">
+      <a href="./Mario Jump/index.html">
         <h3>Se esquecer lascou!</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
