--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="dp-menu"> <!--Aqui nós iremos iniciar a barra de navegação do site príncipal-->
 
       <ul> <!--Aqui estamos declarando uma lista-->
-        <a href="./Pagina_teste.html">
-          <img class="imagem_site" src="./Imagens/_7aeb366d-6678-4616-8718-8be2c0bfd5e0.jpg" height="40"
+        <a href="./index.html">
+          <img class="imagem_site" src="./Imagens/ImagemIdentidade.jpg" height="40"
             alt="Imagem identidade do site" title="Mabi Games">
         </a>
         <li> <!--Primeiro elemento da lista-->
