--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
     </div>
 
     <div class="column-4"> <!--Quarta DIV declarada com a classe de "Column 4" -->
-      <a href="./Mario Jump/index.html">
+      <a href="./Jogo de Adivinhacao/index.html">
         <h3>Se esquecer lascou!</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
     </div>
 
     <div class="column-5"> <!--Quinta DIV declarada com a classe de "Column 5" -->
-      <a href="#">
+      <a href="./Jogo da Memoria Bia/index.html">
         <h3>Se esquecer lascou!</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
