--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="column-6"> <!--Sexta DIV declarada com a classe de "Column 6" -->
-      <a href="#">
+      <a href="./calculadora/index.html">
         <h3>Se esquecer lascou!</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
