--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
 
     <div class="column-4"> <!--Quarta DIV declarada com a classe de "Column 4" -->
       <a href="./Jogo de Adivinhacao/index.html">
-        <h3>Se esquecer lascou!</h3>
+        <h3>Jogo de Adivinhação</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
     </div>
 
     <div class="column-5"> <!--Quinta DIV declarada com a classe de "Column 5" -->
       <a href="./Jogo da Memoria Bia/index.html">
-        <h3>Se esquecer lascou!</h3>
+        <h3>Jogo da Memória</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
     </div>
 
     <div class="column-6"> <!--Sexta DIV declarada com a classe de "Column 6" -->
       <a href="./calculadora/index.html">
-        <h3>Se esquecer lascou!</h3>
+        <h3>Gomoku</h3>
         <img src="./Imagens/brain.png" width="150">
       </a>
     </div>
