--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="column-5"> <!--Quinta DIV declarada com a classe de "Column 5" -->
       <a href="./Jogo da Memoria Bia/index.html">
         <h3>Jogo da Memória</h3>
-        <img src="./Imagens/cerebro(3).png" width="150">
+        <img src="./Imagens/cerebro.png" width="150">
       </a>
     </div>
 
