--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="column-6"> <!--Sexta DIV declarada com a classe de "Column 6" -->
       <a href="./calculadora/index.html">
         <h3>Gomoku</h3>
-        <img src="./Imagens/gomoku.jpg" width="150">
+        <img src="./Imagens/tabuleiro-xadrez.png" width="150">
       </a>
     </div>
   </div>
@@ -151,8 +151,8 @@
     <!-- Rodapé -->
     <footer class="rodape" id="rodape">
         <div class="redes-sociais">
-            <a href="#" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Maria Fernanda"></a>
-            <a href="#" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Bianca"></a>
+            <a href="https://instagram.com/m.fernanda.go?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Maria Fernanda"></a>
+            <a href="https://github.com/MariaFernanda1105" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Maria Fernanda"></a>
             <a href="#" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram" title="Instagram de Maria Fernanda"></a>
             <a href="#" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram de Bianca" title="Instagram de Bianca"></a>
         </div>
@@ -168,6 +168,8 @@
             <p>Atribuições de Imagens: Snake Game: <a href="https://www.flaticon.com/free-icons/board-game" title="board game icons">Board game icons criados por Freepik - Flaticon</a></p>
             <p>Atribuições de Imagens: GitHub Logo: <a href="https://www.flaticon.com/free-icons/cat" title="GitHub icons">Cat icons criados por Dave Gandy - Flaticon</a></p>
             <p>Atribuições de Imagens: Cérebro: <a href="https://www.flaticon.com/br/icones-gratis/cerebro" title="cérebro ícones">Cérebro ícones criados por max.icons - Flaticon</a></p>
+            <p>Atribuições de Imagens: Cérebro 2: <a href="https://www.flaticon.com/br/icones-gratis/cerebro" title="cérebro ícones">Cérebro ícones criados por Freepik - Flaticon</a></p>
+            <p>Atribuições de Imagens: Cérebro: <a href="https://www.flaticon.com/br/icones-gratis/tabuleiro-de-damas" title="tabuleiro de damas ícones">Tabuleiro de damas ícones criados por Talha Dogar - Flaticon</a></p>
           </div>
     </footer>
 
