--- a/index.html
+++ b/index.html
@@ -151,16 +151,17 @@
     <!-- Rodapé -->
     <footer class="rodape" id="rodape">
         <div class="redes-sociais">
-            <a href="https://instagram.com/m.fernanda.go?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Maria Fernanda"></a>
             <a href="https://github.com/MariaFernanda1105" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Maria Fernanda"></a>
-            <a href="#" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram" title="Instagram de Maria Fernanda"></a>
-            <a href="#" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram de Bianca" title="Instagram de Bianca"></a>
+            <a href="https://github.com/bybianca" target="_blank"><img src="./Imagens/github-logo.png" alt="GitHub" title="GitHub de Bianca"></a>
+            <a href="https://instagram.com/m.fernanda.go?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram" title="Instagram de Maria Fernanda"></a>
+            <a href="https://www.instagram.com/invites/contact/?i=c77labqkep21&utm_content=52q9gka" target="_blank"><img src="./Imagens/instagramPNG.webp" alt="Instagram de Bianca" title="Instagram de Bianca"></a>
         </div>
         
         <div class="criadores">
             <p>Criado por: Maria Fernanda Gomes<br>
               Bianca Rodrigues
             </p>
+           <img src="./Imagens/whatsapp.png" alt="Compartilhar no Whatsapp" id="whatsappShareButton" width="4%" style="cursor: pointer;" title="Compartilhar no Whatsapp" alt="Compartilhar no whatsapp">
         </div>
 
         <div class="atribuicoes">
