--- a/index.html
+++ b/index.html
@@ -108,42 +108,42 @@
     <div class="column-1"> <!--Primeira DIV declarada com a classe de "Column 1" -->
       <a href="./snake Game/index.html">
         <h3>Snake Game</h3>
-        <img src="./Imagens/snake.png" width="150">
+        <img src="./Imagens/snake.png" width="150" atl="Imagem jogo Snake Game">
       </a>
     </div>
 
     <div class="column-2"> <!--Segunda DIV declarada com a classe de "Column 2" -->
       <a href="./Mario Jump/index.html">
         <h3>Mario Jump</h3>
-        <img src="./Imagens/Paper-Mario-icon.png" width="150">
+        <img src="./Imagens/Paper-Mario-icon.png" width="150" atl="Imagem jogo Mario Jump">
       </a>
     </div>
 
     <div class="column-3"> <!--Terceira DIV declarada com a classe de "Column 3" -->
       <a href="./Jogo da Memória/index.html">
         <h3>Jogo da Memória</h3>
-        <img src="./Imagens/brain.png" width="150">
+        <img src="./Imagens/brain.png" width="150" atl="Imagem jogo Jogo da Memória">
       </a>
     </div>
 
     <div class="column-4"> <!--Quarta DIV declarada com a classe de "Column 4" -->
       <a href="./Jogo de Adivinhacao/index.html">
         <h3>Jogo de Adivinhação</h3>
-        <img src="./Imagens/AdivinhaNumero.webp" width="150">
+        <img src="./Imagens/AdivinhaNumero.webp" width="150" atl="Imagem jogo Jogo de adivinhação">
       </a>
     </div>
 
     <div class="column-5"> <!--Quinta DIV declarada com a classe de "Column 5" -->
       <a href="./Jogo da Memoria Bia/index.html">
         <h3>Jogo da Memória</h3>
-        <img src="./Imagens/cerebro.png" width="150">
+        <img src="./Imagens/cerebro.png" width="150" atl="Imagem jogo Jogo da Memória 2">
       </a>
     </div>
 
     <div class="column-6"> <!--Sexta DIV declarada com a classe de "Column 6" -->
       <a href="./calculadora/index.html">
         <h3>Gomoku</h3>
-        <img src="./Imagens/tabuleiro-xadrez.png" width="150">
+        <img src="./Imagens/tabuleiro-xadrez.png" width="150" atl="Imagem jogo Gomoku">
       </a>
     </div>
   </div>
